--- a/bower.json
+++ b/bower.json
@@ -1,7 +1,7 @@
 {
-  "name": "ChromeKeepass",
+  "name": "ChromeKeepass App",
   "version": "0.0.0",
-  "homepage": "https://github.com/perfectapi/ChromeKeePass",
+  "homepage": "https://github.com/perfectapi/ChromeKeePass-App",
   "authors": [
     "Steve Campbell <steve@perfectapi.com>"
   ],
@@ -18,16 +18,10 @@
     "tests"
   ],
   "dependencies": {
-    "json-formatter": "~0.2",
-    "jquery": "~2.1",
-    "angular": "~1.2",
-    "angular-animate": "~1.2",
-    "angular-route": "~1.2",
-    "animate.css": "~3.2",
-    "Case": "~1.2",
-    "mocha": "~2.1.0",
-    "should": "shouldjs/should.js#~5.0.0",
-    "sinonjs": "~1.10.2",
-    "angular-sanitize": "~1.2"
+    "angular": "~1.3",
+    "angular-animate": "~1.3",
+    "angular-route": "~1.3",
+    "angular-sanitize": "~1.3",
+    "angular-material": "~0.8.3"
   }
 }
