--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "ChromeKeePass",
-  "version": "2015.1.18",
+  "name": "ChromeKeePass App",
+  "version": "2015.3.7",
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-clean": "^0.6.0",
