--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ChromeKeePass App",
+  "name": "ChromeKeePass-App",
   "version": "2015.3.7",
   "devDependencies": {
     "grunt": "^0.4.5",
